i18n for user roles in groups, uppercase for labels, css helper classes for uppercase/lowercase/capitalize

--- a/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
+++ b/bibsonomy-webapp/src/main/webapp/resources/css/bootstrap-main.less
@@ -91,6 +91,17 @@
 	content: @fa-var-google-plus;
 }
 
+.capitalize {
+	text-transform: capitalize;
+}
+
+.uppercase {
+	text-transform: uppercase;
+}
+
+.lowercase {
+	text-transform: lowercase;
+}
 
 ul.checklist {
 	list-style: none;
@@ -1094,6 +1105,7 @@ fieldset {
 	border-left: none;
 }
 
+span.label.label-default > a,
 span.label.label-primary > a,
 span.label.label-info > a,
 span.label.label-warning > a,
