--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/history.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/history.jspx
@@ -222,26 +222,26 @@
 														<c:choose>
 															<!-- if version 0  -->
 															<c:when test="${index eq fieldlength }">
-																<c:set var="diffArrayPre" value="${mtl:DiffEntriesPub(listView.list[(fieldlength-index)],listView.list[(fieldlength-index)])}"/>
+																<c:set var="diffArrayPre" value="${mtl:diffEntriesPub(listView.list[(fieldlength-index)],listView.list[(fieldlength-index)])}"/>
 															</c:when>
 															<c:otherwise>
-																<c:set var="diffArrayPre" value="${mtl:DiffEntriesPub(listView.list[(fieldlength-index-1)],listView.list[(fieldlength-index)])}"/>
+																<c:set var="diffArrayPre" value="${mtl:diffEntriesPub(listView.list[(fieldlength-index-1)],listView.list[(fieldlength-index)])}"/>
 															</c:otherwise>
 														</c:choose>		
-														<c:set var="diffArrayCurr" value="${mtl:DiffEntriesPub(listView.list[(fieldlength)],listView.list[(fieldlength-index)])}"/>									
+														<c:set var="diffArrayCurr" value="${mtl:diffEntriesPub(listView.list[(fieldlength)],listView.list[(fieldlength-index)])}"/>									
 													</c:when>
 													<c:otherwise>
 														<!-- constraint on version 0  -->
 														<c:choose>
 															<!-- if version 0  -->
 															<c:when test="${index eq fieldlength }">
-																<c:set var="diffArrayPre" value="${mtl:DiffEntriesBm(listView.list[(fieldlength-index)],listView.list[(fieldlength-index)])}"/>
+																<c:set var="diffArrayPre" value="${mtl:diffEntriesBm(listView.list[(fieldlength-index)],listView.list[(fieldlength-index)])}"/>
 															</c:when>
 															<c:otherwise>
-																<c:set var="diffArrayPre" value="${mtl:DiffEntriesBm(listView.list[(fieldlength-index-1)],listView.list[(fieldlength-index)])}"/>
+																<c:set var="diffArrayPre" value="${mtl:diffEntriesBm(listView.list[(fieldlength-index-1)],listView.list[(fieldlength-index)])}"/>
 															</c:otherwise>
 														</c:choose>
-														<c:set var="diffArrayCurr" value="${mtl:DiffEntriesBm(listView.list[(fieldlength)],listView.list[(fieldlength-index)])}"/>									
+														<c:set var="diffArrayCurr" value="${mtl:diffEntriesBm(listView.list[(fieldlength)],listView.list[(fieldlength-index)])}"/>									
 													</c:otherwise>
 												</c:choose>
 
