--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/history.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/history.jspx
@@ -7,15 +7,11 @@
 	xmlns:fn="http://java.sun.com/jsp/jstl/functions"
 	xmlns:mtl="urn:jsptld:/WEB-INF/taglibs/mytaglib.tld"
 	xmlns:parts="urn:jsptagdir:/WEB-INF/tags/bstags/layout/parts"
-	xmlns:rc="urn:jsptagdir:/WEB-INF/tags/bstags/resources/common"
-	xmlns:form="http://www.springframework.org/tags/form"
 
 	xmlns:resource="urn:jsptagdir:/WEB-INF/tags/bstags/resources"
 	xmlns:bib="urn:jsptagdir:/WEB-INF/tags/bstags/resources/bibtex"
 	xmlns:pub="urn:jsptagdir:/WEB-INF/tags/bstags/resources/publication"
 	xmlns:bm="urn:jsptagdir:/WEB-INF/tags/bstags/resources/bookmark"
-	xmlns:bibgs="urn:jsptagdir:/WEB-INF/tags/bstags/resources/goldstandardpublication"
-	xmlns:gpub="urn:jsptagdir:/WEB-INF/tags/bstags/resources/goldstandardpublication"
 	xmlns:buttons="urn:jsptagdir:/WEB-INF/tags/bstags/resources/actionbuttons"
 	
 >
@@ -123,7 +119,7 @@
 											<div class="title">
 												<div class="media">
 													<div class="media-body" id="titletext">
-														<div class="pull-right"><gpub:actions post="${newestPost}" /></div>
+														<div class="pull-right"><buttons:communityPostActions post="${newestPost}" resourceType="bibtex"/></div>
 														<h1 class="media-heading" id="pubtitle"><c:out value="${mtl:cleanBibtex(newestPost.resource.title)}" /></h1>
 														<p><bib:desc publication="${newestPost.resource}"/></p>
 													</div>
@@ -152,8 +148,7 @@
 											<div class="title">
 											<div class="media">
 												<div class="media-body" id="titletext">
-												<!-- currently there is no specific tagx file for gsBookmark actions -->
-												<!-- 	<div class="pull-right"><buttons:actions post="${newestPost}" loginUserName="${command.context.loginUser.name}"/></div> -->
+													<div class="pull-right"><buttons:communityPostActions post="${newestPost}" resourceType="bookmark"/></div>
 													<h1 class="media-heading" id="pubtitle"><c:out value="${mtl:cleanBibtex(newestPost.resource.title)}" /></h1>
 													<c:set var="url" value="${newestPost.resource.url}" />
 													<p><a href="${url}"><c:out value="${url}" /></a></p>
