added forgotten message

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/history.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/bsjsp/history.jspx
@@ -354,6 +354,11 @@
 									</tbody>
 								</table>
 							</c:when>
+							<c:otherwise>
+								<div class="alert alert-info" style="margin:10px;" role="alert">
+									<fmt:message key="History.empty" />
+								</div>
+							</c:otherwise>
 						</c:choose>
 					</form>
 				</div>
