i18n for group join site

--- a/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/actions/join_group.jspx
+++ b/bibsonomy-webapp/src/main/webapp/WEB-INF/jsp/actions/join_group.jspx
@@ -41,7 +41,7 @@
 		 	| content
 		 	-->
 		<jsp:attribute name="content">
-			Group operations in the old layout aren't supported anymore. Please switch to the <a href="/bibsonomy3">new layout.</a>
+			<fmt:message key="join.group.unsupported"/>
 		</jsp:attribute>
 		
 		<!--+
